@@ -177,6 +177,9 @@ changes for the Macintosh. </p>
 
 <p> Jannie Hofmeyr submitted a fix for Windows under Python 2.0. </p>
 
+<p> Matthew Fulmer contributed a patch to add the <tt>filename</tt>
+argument to Data and GridData. </p>
+
 <p> Thanks also to many other users who have submitted suggestions,
 bug fixes, and other feedback. </p>
 
